# DeComFL

./: .cursorrules  .env  .gitignore  .style.yapf  README  README.md  attack.py  attack_torch.py  cezo_fl_main.py  conda_env_command.bash  config.py  create_tsv.py  ddp_rpc_example.py  decomfl_main.py  environment.yml  environment_cuda.yml  fed_avg_main.py  fed_zo_main.py  fo_fl_main.py  generate_pruning_sparsity.py  grpc_client.py  grpc_eval_client.py  grpc_server.py  grpc_server_test.py  input_by_yourself_main.py  llm_fo_fine_tune_main.py  llm_sst2_fine_tune.py  load_python_env.sh  main.py  memory.pickle  memory_profile.py  mnist_pdd_1_model.py  mnist_pdd_for_2_models.py  mnist_result  mnist_rge_1_model.py  mnist_rge_sgd_1_model.py  mnist_sgd_1_model.py  mnist_sgd_2_models.py  mnist_sgd_simple_cnn.py  mnist_split_cnn_training.py  (+36 more)
.github/: ci.yaml
ZO-FL-Byzantine/: defense.py  defense_test.py
attack_image/: attack.py  attack_torch.py  experiments.ipynb  torch_attack_class.py  train_cnn.py
byzantine/: aggregation.py  attack.py  bayesian_estimate.py
cezo_fl/: aggregation.py  client.py  client_test.py  coordinate_gradient_estimator.py  coordinate_gradient_estimator_test.py  fl_helpers.py  random_gradient_estimator.py  random_gradient_estimator_test.py  run_client_jobs.py  run_client_jobs_test.py  server.py  server_test.py  shared.py  typing.py
cezo_grpc/: README.md  cli_interface.py  data_helper.py  sample.proto  sample_pb2.py  sample_pb2_grpc.py
compression/: top_k.py
dev_tools/: README.md  dev-requirement.txt  dev-requirements.txt
experiment_helper/: data.py  (+7 more)
(+144 files in other folders)
