[project]
name = "decomfl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"torch>=2.7.0",
	"torchvision>=0.22.0",
	"transformers>=4.57.0",
	"accelerate",
	"datasets",
	"numpy",
	"peft",
	"tensorboardx",
	"tqdm",
	"pydantic",
	"pydantic-settings",
	"python-dotenv",
	"ruff>=0.14.5",
]


[tool.uv.sources]
torch = [
  { index = "pytorch-cu126"},
]
torchvision = [
  { index = "pytorch-cu126"},
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
